@@ -8,13 +8,13 @@ denounce.denouncetext = &lt;Link removed because I do not wish to endorse this l
 
 #
 #  Which user agents should be denounced.
-#
-denounce.agentpattern.googlebot = *Googlebot*
-denounce.agentpattern.inktomi   = *Slurp/*
-denounce.agentpattern.fastsearch = *FAST-WebCrawler/*
-denounce.agentpattern.voila     = *VoilaBot*
-denounce.agentpattern.ms        = *MicrosoftPrototypeCrawler*
-denounce.agentpattern.grub      = *grub-client*
+# Uses java.util.regex.Pattern for matching  
+denounce.agentpattern.googlebot = .*Googlebot.*
+denounce.agentpattern.inktomi   = .*Slurp/.*
+denounce.agentpattern.fastsearch = .*FAST-WebCrawler/.*
+denounce.agentpattern.voila     = .*VoilaBot.*
+denounce.agentpattern.ms        = .*MicrosoftPrototypeCrawler.*
+denounce.agentpattern.grub      = .*grub-client.*
 #
 #  Which referers should be denounced.
 #
@@ -25,6 +25,6 @@ denounce.agentpattern.grub      = *grub-client*
 #  of ServletRequest.getRemoteHost(), which may return an IP address as
 #  well, if the name cannot be determined.
 #
-denounce.hostpattern.googlebot = *.googlebot.com
-denounce.hostpattern.inktomi   = *.inktomisearch.com
-denounce.hostpattern.alexa     = crawl*.alexa.com
+denounce.hostpattern.googlebot = .*googlebot\\.com
+denounce.hostpattern.inktomi   = .*inktomisearch\\.com
+denounce.hostpattern.alexa     = crawl\\.*\\.alexa\\.com
